--- a/shop-list.html
+++ b/shop-list.html
@@ -299,7 +299,7 @@
 		}
 		@media (max-width: 540px) {
 			.topbar { padding: 6px 6px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
-			.hero { grid-template-columns: 1fr; gap: 8px; padding: 8px 10px; }
+			.hero { grid-template-columns: 1fr auto; gap: 8px; padding: 8px 10px; align-items: center; }
 			.hero h1 { font-size: 1.3rem; }
 			.filters { margin-top: 6px; }
 			.grid { grid-template-columns: 1fr; gap: 10px; }
