--- a/menu.html
+++ b/menu.html
@@ -56,6 +56,8 @@
 			display: inline-flex;
 			align-items: center;
 			gap: 10px;
+			flex: 1;
+			min-width: 0;
 		}
 
 		.brand {
@@ -66,7 +68,15 @@
 			font-weight: 700;
 			letter-spacing: 0.5px;
 			color: var(--orange-dark);
-			white-space: nowrap;
+			white-space: normal;
+			flex: 1;
+			min-width: 0;
+			overflow: hidden;
+		}
+
+		#brand-name {
+			overflow-wrap: anywhere;
+			line-height: 1.2;
 		}
 
 		.brand-logo {
@@ -77,6 +87,7 @@
 			border: 1px solid var(--border);
 			background: var(--gray);
 			box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+			flex-shrink: 0;
 		}
 
 		.header-right {
@@ -85,6 +96,7 @@
 			gap: 14px;
 			font-size: 14px;
 			color: var(--black);
+			flex-shrink: 0;
 		}
 
 		.pill {
@@ -741,6 +753,20 @@
 
 			.badge {
 				font-size: 11px;
+			}
+
+			header {
+				padding: 0 14px;
+			}
+
+			.brand {
+				font-size: 17px;
+				gap: 8px;
+			}
+
+			.brand-logo {
+				width: 32px;
+				height: 32px;
 			}
 		}
 
